fixed project spacing

--- a/styles/portfoliopage.module.css
+++ b/styles/portfoliopage.module.css
@@ -24,20 +24,14 @@
   grid-template-columns: 50% 50%;
 }
 
+@media (min-width: calc(350px * 3)) {
+  .grid {
+    --repeat: 3;
+  }
+}
+
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(var(--repeat, auto-fit), 350px);
   justify-content: center;
-}
-
-@media screen and (max-width: 700px) {
-  .grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 499px) {
-  .grid {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
